objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Employment Application</fullName>
        <description>This is the lead process for potential employees.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bad email%2C but still works at company</fullName>
        </values>
        <values>
            <fullName>Disposition Letter No Phone Screen %28SENDS EMAIL%29</fullName>
        </values>
        <values>
            <fullName>Disposition Letter Post Phone Screen %28SENDS EMAIL%29</fullName>
        </values>
        <values>
            <fullName>Disposition Letter Post in person interview %28SENDS EMAIL%29</fullName>
        </values>
        <values>
            <fullName>Eliminated</fullName>
        </values>
        <values>
            <fullName>HR Reviewed</fullName>
        </values>
        <values>
            <fullName>Hired</fullName>
        </values>
        <values>
            <fullName>Interviewed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Considered - Completely Unqualified</fullName>
        </values>
        <values>
            <fullName>Not Considered - Late Application</fullName>
        </values>
        <values>
            <fullName>Online Assessment Sent</fullName>
        </values>
        <values>
            <fullName>Phone Screen</fullName>
        </values>
        <values>
            <fullName>References%2FOffer</fullName>
        </values>
        <values>
            <fullName>Reviewed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>O%26M Biz Dev</fullName>
        <description>O&amp;M Biz Dev lead process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Entry</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Search %26 Research</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>This is the standard lead process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bad Phone Number</fullName>
        </values>
        <values>
            <fullName>Bad email%2C but still works at company</fullName>
        </values>
        <values>
            <fullName>Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>Company Unqualified</fullName>
        </values>
        <values>
            <fullName>Contact attempted%2C abandoned</fullName>
        </values>
        <values>
            <fullName>Contact attempted%2C unreached</fullName>
        </values>
        <values>
            <fullName>Contacted%2C Long Term</fullName>
        </values>
        <values>
            <fullName>Contacted%2C ongoing</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>No Longer With Company</fullName>
        </values>
        <values>
            <fullName>No contact attempted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not a solar customer</fullName>
        </values>
        <values>
            <fullName>PD will not call</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Wrong Person With Company</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accept_Paperwork_via_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer is willing to accept paperwork such as proposals and contracts via email.</description>
        <label>Accept Paperwork via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account related to this Lead</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Company_Sites__c</fullName>
        <inlineHelpText>Does the host have property outside of this state?</inlineHelpText>
        <label>Additional Company Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>American_Indian_or_Alaskan_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <label>American Indian or Alaskan Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Departments__c</fullName>
        <description>Shows which categories the job applicant has skills or experience in.</description>
        <label>Skills or Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Finance/Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_or_African_American__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black or African American</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>Determines what branch office will be handling lead and account.</description>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                    <label>Oakland</label>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_employment__c</fullName>
        <description>branch field specifically used for employment, not sales leads</description>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Greater Boston Area</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Upstate New York</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Square_Footage__c</fullName>
        <label>Building Square Footage</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Data__c</fullName>
        <label>Campaign Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Intent__c</fullName>
        <inlineHelpText>&quot;To Contact&quot; if you intend to call the lead as part of this campaign</inlineHelpText>
        <label>Campaign Intent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Contact</fullName>
                </value>
                <value>
                    <fullName>Maybe Contact</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>should define the role this contact will play in their relationship with Borrego</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Contact</fullName>
                </value>
                <value>
                    <fullName>Host Contact</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Owner Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Sales Decision-Maker</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Not Yet Identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <description>This is the applicants cover letter.</description>
        <label>Cover Letter</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Date__c</fullName>
        <inlineHelpText>The date on which the credit was verified.</inlineHelpText>
        <label>Credit Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <inlineHelpText>Official credit rating from public ratings agency.</inlineHelpText>
        <label>Credit Rating</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_1st_Assigned_to_MQL_Queue__c</fullName>
        <description>auto updates the date that the lead was first assigned to the MQL queue</description>
        <inlineHelpText>auto updates the date that the lead was first assigned to the MQL queue</inlineHelpText>
        <label>First date marketing-qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Modified__c</fullName>
        <formula>NOW()-LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decline__c</fullName>
        <description>Accept of decline to answer the affirmative action questions of race/ethnicity</description>
        <label>Decline Race Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_to_Answer_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>for affirmative action application</inlineHelpText>
        <label>Decline to Answer Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decline_to_Answer_Protected_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>for affirmative action application</inlineHelpText>
        <label>Decline to Answer Protected Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <label>Prospect Development</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Project Development</fullName>
                </value>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Strategic BD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <description>web form</description>
        <inlineHelpText>for affirmative action application</inlineHelpText>
        <label>Disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I have a disability (or previously had a disability)</fullName>
                </value>
                <value>
                    <fullName>No, I don&apos;t have a disability</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t wish to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition_Letter_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Gets auto checked when status changes to any of the 3 Disposition Letter Statuses</inlineHelpText>
        <label>Disposition Letter Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>Dependent picklist value for O&amp;M Biz Dev Lead Status of Disqualified</description>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Data</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Not Real</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Bid_Date__c</fullName>
        <label>Expected Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Stage__c</fullName>
        <label>Final Stage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>Financing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPA – Borrego</fullName>
                </value>
                <value>
                    <fullName>PPA - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Letter__c</fullName>
        <inlineHelpText>SELECTING A VALUE WILL SEND AN EMAIL TO EMAIL ADDRESS ABOVE.</inlineHelpText>
        <label>Follow Up Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Phone Screen</fullName>
                    <label>Disposition Letter No Phone Screen</label>
                </value>
                <value>
                    <fullName>Post Phone Screen</fullName>
                    <label>Disposition Letter Post Phone Screen</label>
                </value>
                <value>
                    <fullName>Post in person interview</fullName>
                    <label>Disposition Letter Post in person interview</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Demand_Appliances__c</fullName>
        <label>High Demand Appliances</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hispanic_or_Latino__c</fullName>
        <label>Hispanic or Latino</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Contact_Method__c</fullName>
        <description>How this person first contacted us</description>
        <label>Initial Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Uknown</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Tradeshow/Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <label>Install Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ground</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Car Port</fullName>
                </value>
                <value>
                    <fullName>Awning</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Applying_For__c</fullName>
        <description>Which job is the applicant applicant applying for.</description>
        <label>Job Applying For</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Requisition__c</fullName>
        <description>This field is populated from the web to leads function. The Job Requisition # is maintained by Muneet when posting jobs on our website.</description>
        <inlineHelpText>This field is populated from the web to leads function. The Job Requisition # is maintained by Muneet when posting jobs on our website.</inlineHelpText>
        <label>Job Requisition #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Residential - Multi-Unit</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>PV Direct</fullName>
                </value>
                <value>
                    <fullName>Utility Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jon_Cerino__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jon Cerino</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ladder_Access__c</fullName>
        <label>Ladder Access</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_available_sq_ft__c</fullName>
        <label>Land available (acres)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Status__c</fullName>
        <description>used only to help map existing lead status to contact status upon conversion, updated via a workflow</description>
        <inlineHelpText>used only to help map existing lead status to contact status upon conversion</inlineHelpText>
        <label>Lead Conversion Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Specific__c</fullName>
        <label>Lead Source Specific</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Age__c</fullName>
        <formula>IF(ISPICKVAL(Status , &quot;Open&quot;), ROUND(Now()-CreatedDate, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__DomainName__c</fullName>
        <formula>LeadsManager__Domain_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__FirstActivityDate__c</fullName>
        <label>First Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__LastActivityDate__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__LastfilteredDate__c</fullName>
        <inlineHelpText>Populate this value using your own filtered activities from custom setting.</inlineHelpText>
        <label>Last Activity Date (filtered)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Leads_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>All Leads &amp; Contacts From This Company</label>
        <referenceTo>LeadsManager__Leads_Manager__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NextActivityDate__c</fullName>
        <label>Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NumberOfActivities__c</fullName>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NumberOfLeads__c</fullName>
        <formula>LeadsManager__Leads_Manager__r.LeadsManager__NumberOfLeads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Rating__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,10) + IF(LEN( LastName ) = 0, 0,10) + IF(LEN( Company ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,30 + IF(LEN( Phone ) = 0, 0,10) + IF(LEN( MobilePhone ) = 0, 0,10) + IF( LEN( Title ) = 0, 0,10) ) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) -  IF( LOWER(Company)  =  &apos;[not provided]&apos;, 30, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__RefactoredCompanyName__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Company, &apos;[not provided]&apos;, &apos;Unknown&apos;), &apos;llp&apos;, &apos;&apos;), &apos; corporation&apos;, &apos;&apos;) , &apos; and&apos;, &apos;&apos;) , &apos; &amp;&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos; corp&apos;, &apos;&apos;) , &apos; limited&apos;, &apos;&apos;) , &apos;pvt&apos;, &apos;&apos;) , &apos;llc&apos;, &apos;&apos;) , &apos; incorporated&apos;, &apos;&apos;) , &apos; incorporation&apos;, &apos;&apos;), &apos;inc&apos;, &apos;&apos;), &apos;ltd&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refactored Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
</CustomObject>